example/cimport/lib/ffi.g.dart

// ignore_for_file: type=lint
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:native_toolchain_zig`.
@ffi.DefaultAsset('package:cimport/ffi.g.dart')
library;

import 'dart:ffi' as ffi;

final class c_struct_CImportPoint extends ffi.Struct {
  @ffi.Int32()
  external int x;

  @ffi.Int32()
  external int y;

}

final class c_union_CImportValue extends ffi.Union {
  @ffi.Int64()
  external int as_i64;

  @ffi.Double()
  external double as_f64;

  external ffi.Pointer<ffi.Uint8> as_str;

  external c_struct_CImportPoint as_point;

}

final class c_struct_CImportPacket extends ffi.Struct {
  @ffi.Uint32()
  external int kind;

  @ffi.Uint32()
  external int flags;

  @ffi.UintPtr()
  external int count;

  @ffi.Array(16)
  external ffi.Array<ffi.Uint8> bytes;

  @ffi.Array(2)
  external ffi.Array<c_struct_CImportPoint> points;

  external c_union_CImportValue value;

}

final class c_struct_CImportNode extends ffi.Struct {
  @ffi.Int32()
  external int id;

  @ffi.Uint32()
  external int kind;

  external c_struct_CImportPoint point;

  external c_union_CImportValue value;

  external ffi.Pointer<c_struct_CImportNode> next;

}

@ffi.Native<c_struct_CImportPoint Function(ffi.Int32, ffi.Int32)>(symbol: 'cimport_point_make')
external c_struct_CImportPoint cimport_point_make(int x, int y);

@ffi.Native<c_union_CImportValue Function(ffi.Int64)>(symbol: 'cimport_value_from_int')
external c_union_CImportValue cimport_value_from_int(int value);

@ffi.Native<c_union_CImportValue Function(ffi.Double)>(symbol: 'cimport_value_from_double')
external c_union_CImportValue cimport_value_from_double(double value);

@ffi.Native<c_union_CImportValue Function(ffi.Pointer<ffi.Uint8>)>(symbol: 'cimport_value_from_string')
external c_union_CImportValue cimport_value_from_string(ffi.Pointer<ffi.Uint8> value);

@ffi.Native<c_struct_CImportPacket Function(ffi.Uint32, ffi.Int32, ffi.Int32)>(symbol: 'cimport_make_packet')
external c_struct_CImportPacket cimport_make_packet(int kind, int x, int y);

@ffi.Native<ffi.Pointer<c_struct_CImportNode> Function(ffi.Int32, ffi.Uint32, c_struct_CImportPoint, c_union_CImportValue)>(symbol: 'cimport_node_create')
external ffi.Pointer<c_struct_CImportNode> cimport_node_create(int id, int kind, c_struct_CImportPoint point, c_union_CImportValue value);

@ffi.Native<ffi.Pointer<c_struct_CImportNode> Function(ffi.Pointer<c_struct_CImportNode>, ffi.Pointer<c_struct_CImportNode>)>(symbol: 'cimport_node_append')
external ffi.Pointer<c_struct_CImportNode> cimport_node_append(ffi.Pointer<c_struct_CImportNode> head, ffi.Pointer<c_struct_CImportNode> node);

@ffi.Native<ffi.Void Function(ffi.Pointer<c_struct_CImportNode>)>(symbol: 'cimport_node_destroy')
external void cimport_node_destroy(ffi.Pointer<c_struct_CImportNode> node);

@ffi.Native<ffi.UintPtr Function(ffi.Pointer<c_struct_CImportNode>)>(symbol: 'cimport_node_count')
external int cimport_node_count(ffi.Pointer<c_struct_CImportNode> node);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<c_struct_CImportNode>)>(symbol: 'cimport_node_sum')
external int cimport_node_sum(ffi.Pointer<c_struct_CImportNode> node);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<c_struct_CImportPoint>, ffi.UintPtr)>(symbol: 'cimport_sum_points')
external int cimport_sum_points(ffi.Pointer<c_struct_CImportPoint> points, int len);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<c_struct_CImportPoint>, ffi.UintPtr, ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function(c_struct_CImportPoint, ffi.Pointer<ffi.Void>)>>, ffi.Pointer<ffi.Void>)>(symbol: 'cimport_fold_points')
external int cimport_fold_points(ffi.Pointer<c_struct_CImportPoint> points, int len, ffi.Pointer<ffi.NativeFunction<ffi.Int32 Function(c_struct_CImportPoint, ffi.Pointer<ffi.Void>)>> fold, ffi.Pointer<ffi.Void> user);

@ffi.Native<ffi.Void Function(ffi.Pointer<c_struct_CImportPoint>, ffi.UintPtr, ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<c_struct_CImportPoint>, ffi.Pointer<ffi.Void>)>>, ffi.Pointer<ffi.Void>)>(symbol: 'cimport_visit_points')
external void cimport_visit_points(ffi.Pointer<c_struct_CImportPoint> points, int len, ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<c_struct_CImportPoint>, ffi.Pointer<ffi.Void>)>> visit, ffi.Pointer<ffi.Void> user);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Uint32)>(symbol: 'cimport_kind_name')
external ffi.Pointer<ffi.Uint8> cimport_kind_name(int kind);

@ffi.Native<ffi.UintPtr Function(c_struct_CImportPacket)>(symbol: 'cimport_packet_checksum')
external int cimport_packet_checksum(c_struct_CImportPacket packet);
